# Datenerfassung

./: .gitignore  README.md  pyproject.toml
data/rules/: categories.yml  merchants.yml  normalization.yml
docs/: household_ingest_poc.md
schema/: receipt.schema.json
services/household_receipt_service/: README.md
services/ingest_service/: README.md
src/datenerfassung/: engine.py  http_client.py  models.py  project_paths.py  storage.py
src/datenerfassung/classification/: __init__.py  receipt_detector.py
src/datenerfassung/ocr/: __init__.py  paddleocr_backend.py
src/datenerfassung/receipt/: parser_de_v1.py  structured_receipt_v1.py
src/datenerfassung/rules/: __init__.py  categorization.py  loader.py  merchants.py  normalization.py
src/datenerfassung/services/household_receipt_service/: app.py
src/datenerfassung/services/ingest_service/: app.py  orchestrator.py
tests/: test_categorization.py  test_ingest_engine.py  test_normalization.py  test_ocr_example_image.py
