[project]
name = "datenerfassung"
version = "0.1.0"
description = "Self-hosted ingest pipeline for household bookkeeping (receipts, OCR, normalization, rule-based categorization)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
  "mypy>=1.10",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
